--- a/piezasestatuahtml/pieza_estatua19.html
+++ b/piezasestatuahtml/pieza_estatua19.html
@@ -19,23 +19,30 @@
 
       <!-- Imagen principal a la izquierda con marco decorativo y efecto hover -->
       <div class="md:w-1/2 flex justify-center transition-transform transform hover:scale-105">
-        <a href="../mis_fotos/estatuas/estatua19.jpeg" class="glightbox">
-          <img src="../mis_fotos/estatuas/estatua19.jpeg" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza estatua foto 19" />
+        <a href="../mis_fotos/estatuas/estatua19.png" class="glightbox">
+          <img src="../mis_fotos/estatuas/estatua19.png" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza estatua foto 19" />
         </a>
       </div>
 
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua 1 del siglo XX a.d.c.</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Figura Bakota</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+         La figura presenta una cabeza estilizada con rostro ovalado, ojos almendrados incrustados o delineados, nariz recta y boca cerrada. El cráneo está coronado por una estructura triangular o semicircular, revestida con láminas de metal repujado que forman patrones geométricos. El cuerpo, reducido o ausente, se conecta a una base en forma de rombo o bucle, envuelta en fibras vegetales teñidas, que servía para fijar la figura sobre el relicario (cesta con restos ancestrales).
+      Estas figuras, conocidas como mbulu-ngulu, actuaban como guardianes de relicarios que contenían huesos de antepasados importantes. Su presencia protegía espiritualmente el linaje familiar y servía como mediadora entre los vivos y los muertos. El uso de metales brillantes tenía un propósito apotropaico: reflejar la luz y repeler fuerzas malignas.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+         La escultura combina abstracción geométrica y simetría vertical, con fuerte énfasis en la cabeza como sede del poder espiritual. El contraste entre la madera y el metal genera una tensión visual que refuerza su carácter sagrado. El rostro, aunque estilizado, transmite solemnidad y vigilancia.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+         Comparables a los Byeri fang por su función funeraria, los mbulu-ngulu se distinguen por su frontalidad, uso de metales y ausencia de cuerpo anatómico. Su diseño ha influido en artistas modernos como Picasso y Brancusi, y ha sido objeto de estudio en museos como el Musée du Quai Branly y el Metropolitan Museum of Art.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
-          <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Tamaño:</strong> 48 cm de alto</li>
+          <li><strong>Material:</strong> Madera y metal</li>
+          <li><strong>Origen:</strong> Pueblo Bakota (Kota), región de Haut-Ogooué, Gabón</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
