--- a/piezasestatuahtml/pieza_estatua21.html
+++ b/piezasestatuahtml/pieza_estatua21.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pieza estatua 21</title>
+  <title>Pieza estatua 19</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Lightbox CSS y JS simple -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/glightbox/3.2.0/css/glightbox.min.css" integrity="sha512-+KPZs1BTSa6l5vIk91jGJ6dW9UgVSpvGx1Xr2N7m9UTh3f97k2XoZTz2r6H5hVxZx52r6hPSNnD6bk6XkWPMig==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -19,8 +19,8 @@
 
       <!-- Imagen principal a la izquierda con marco decorativo y efecto hover -->
       <div class="md:w-1/2 flex justify-center transition-transform transform hover:scale-105">
-        <a href="../mis_fotos/estatuas/estatua21.jpeg" class="glightbox">
-          <img src="../mis_fotos/estatuas/estatua21.jpeg" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Figura Bakota" />
+        <a href="../mis_fotos/estatuas/estatua21.png" class="glightbox">
+          <img src="../mis_fotos/estatuas/estatua21.png" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza estatua foto 19" />
         </a>
       </div>
 
@@ -28,34 +28,21 @@
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
         <h2 class="text-3xl font-bold mb-4 text-gray-200">Figura Bakota</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
-          Figura estilizada con rostro plano y ovalado, ojos circulares, nariz alargada y cuello acanalado.
-
-El cuerpo forma un arco o rombo, con diseño geométrico abstracto.
-
-Base envuelta en fibras vegetales teñidas en tonos rojos y púrpuras, posiblemente para cubrir el receptáculo de reliquias.
-
-Superficie decorada con láminas de metal repujado, que reflejan luz y simbolizan poder espiritual.
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+         La figura presenta una cabeza estilizada con rostro ovalado, ojos almendrados incrustados o delineados, nariz recta y boca cerrada. El cráneo está coronado por una estructura triangular o semicircular, revestida con láminas de metal repujado que forman patrones geométricos. El cuerpo, reducido o ausente, se conecta a una base en forma de rombo o bucle, envuelta en fibras vegetales teñidas, que servía para fijar la figura sobre el relicario (cesta con restos ancestrales).
+      Estas figuras, conocidas como mbulu-ngulu, actuaban como guardianes de relicarios que contenían huesos de antepasados importantes. Su presencia protegía espiritualmente el linaje familiar y servía como mediadora entre los vivos y los muertos. El uso de metales brillantes tenía un propósito apotropaico: reflejar la luz y repeler fuerzas malignas.
         </p>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
-          Colocado sobre cestas que contenían huesos de antepasados venerados.
-
-Utilizado en rituales funerarios y de protección familiar.
-
-Actúa como guardián del linaje, asegurando fertilidad, cohesión y continuidad espiritual.
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+         La escultura combina abstracción geométrica y simetría vertical, con fuerte énfasis en la cabeza como sede del poder espiritual. El contraste entre la madera y el metal genera una tensión visual que refuerza su carácter sagrado. El rostro, aunque estilizado, transmite solemnidad y vigilancia.
         </p>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
-          Los Bakota practican el culto a los ancestros como base de su organización social.
-
-El arte del mbulu-ngulu combina estética, espiritualidad y función protectora.
-
-Estas figuras fueron objeto de coleccionismo europeo desde el siglo XX, lo que ha generado debates sobre descontextualización y conservación.
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+         Comparables a los Byeri fang por su función funeraria, los mbulu-ngulu se distinguen por su frontalidad, uso de metales y ausencia de cuerpo anatómico. Su diseño ha influido en artistas modernos como Picasso y Brancusi, y ha sido objeto de estudio en museos como el Musée du Quai Branly y el Metropolitan Museum of Art.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
-          <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Madera tallada, láminas de metal (latón, cobre), fibras vegetales</li>
-          <li><strong>Origen:</strong> Bakota (o Kota), Gabón</li>
-         <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
+          <li><strong>Tamaño:</strong> 40 cm de alto</li>
+          <li><strong>Material:</strong> Madera y metal</li>
+          <li><strong>Origen:</strong> Pueblo Bakota (Kota), región de Haut-Ogooué, Gabón</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
@@ -64,7 +51,7 @@ Estas figuras fueron objeto de coleccionismo europeo desde el siglo XX, lo que h
     <!-- Galería adicional con lightbox -->
     <h3 class="text-2xl font-semibold mt-10 mb-4 text-gray-700">Galería Adicional</h3>
     <div class="grid grid-cols-1 gap-6">
-      <a href="../mis_fotos/estatuas/estatua21_1.jpeg" class="glightbox"><img src="../mis_fotos/estatuas/estatua21_1.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza estatua foto 21_1" /></a>
+      <a href="../mis_fotos/estatuas/estatua21_1.jpeg" class="glightbox"><img src="../mis_fotos/estatuas/estatua21_1.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza estatua foto 19_1" /></a>
       <a href="mis_fotos/estatuas/estatua21_2.jpeg" class="glightbox"><img src="mis_fotos/estatuas/estatua21_2.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 3" /></a>
       <a href="mis_fotos/bronces/bronce1_4.jpeg" class="glightbox"><img src="mis_fotos/bronces/bronce1_4.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 4" /></a>
     </div>
