--- a/piezasestatuahtml/pieza_estatua27.html
+++ b/piezasestatuahtml/pieza_estatua27.html
@@ -19,8 +19,8 @@
 
       <!-- Imagen principal a la izquierda con marco decorativo y efecto hover -->
       <div class="md:w-1/2 flex justify-center transition-transform transform hover:scale-105">
-        <a href="../mis_fotos/estatuas/estatua27.jpeg" class="glightbox">
-          <img src="../mis_fotos/estatuas/estatua27.jpeg" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza estatua foto 27" />
+        <a href="../mis_fotos/estatuas/estatua27.png" class="glightbox">
+          <img src="../mis_fotos/estatuas/estatua27.png" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza estatua foto 27" />
         </a>
       </div>
 
