--- a/piezasmascarahtml/pieza_mascara12.html
+++ b/piezasmascarahtml/pieza_mascara12.html
@@ -19,8 +19,8 @@
 
       <!-- Imagen principal a la izquierda con marco decorativo y efecto hover -->
       <div class="md:w-1/2 flex justify-center transition-transform transform hover:scale-105">
-        <a href="../mis_fotos/mascaras/mascara12.jpeg" class="glightbox">
-          <img src="../mis_fotos/mascaras/mascara12.jpeg" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza mascara foto 10" />
+        <a href="../mis_fotos/mascaras/mascara12.png" class="glightbox">
+          <img src="../mis_fotos/mascaras/mascara12.png" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza mascara foto 10" />
         </a>
       </div>
 
