--- a/piezasmascarahtml/pieza_mascara29.html
+++ b/piezasmascarahtml/pieza_mascara29.html
@@ -19,8 +19,8 @@
 
       <!-- Imagen principal a la izquierda con marco decorativo y efecto hover -->
       <div class="md:w-1/2 flex justify-center transition-transform transform hover:scale-105">
-        <a href="../mis_fotos/mascaras/mascara29.jpeg" class="glightbox">
-          <img src="../mis_fotos/mascaras/mascara29.jpeg" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza mascara foto 29" />
+        <a href="../mis_fotos/mascaras/mascara29.png" class="glightbox">
+          <img src="../mis_fotos/mascaras/mascara29.png" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza mascara foto 29" />
         </a>
       </div>
 
@@ -55,7 +55,7 @@ Este tipo de máscaras no es meramente decorativo: suelen ser máscaras de danza
     <!-- Galería adicional con lightbox -->
     <h3 class="text-2xl font-semibold mt-10 mb-4 text-gray-700">Galería Adicional</h3>
     <div class="grid grid-cols-1 gap-6">
-      <a href="../mis_fotos/mascaras/mascara29_1.jpeg" class="glightbox"><img src="mis_fotos/mascaras/mascara29_1.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza mascara foto 29" /></a>
+      <a href="../mis_fotos/mascaras/mascara29_1.png" class="glightbox"><img src="mis_fotos/mascaras/mascara29_1.png" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza mascara foto 29" /></a>
       <a href="mis_fotos/bronces/bronce29_2.jpeg" class="glightbox"><img src="mis_fotos/bronces/bronce29_2.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 4" /></a>
     </div>
 
