--- a/piezasmascarahtml/pieza_mascara36.html
+++ b/piezasmascarahtml/pieza_mascara36.html
@@ -19,8 +19,8 @@
 
       <!-- Imagen principal a la izquierda con marco decorativo y efecto hover -->
       <div class="md:w-1/2 flex justify-center transition-transform transform hover:scale-105">
-        <a href="../mis_fotos/mascaras/mascara36.jpeg" class="glightbox">
-          <img src="../mis_fotos/mascaras/mascara36.jpeg" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza mascara foto 32" />
+        <a href="../mis_fotos/mascaras/mascara36.png" class="glightbox">
+          <img src="../mis_fotos/mascaras/mascara36.png" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza mascara foto 32" />
         </a>
       </div>
 
@@ -65,7 +65,7 @@ El arte Fang combina estética refinada, función espiritual y expresión social
     <!-- Galería adicional con lightbox -->
     <h3 class="text-2xl font-semibold mt-10 mb-4 text-gray-700">Galería Adicional</h3>
     <div class="grid grid-cols-1 gap-6">
-      <a href="../mis_fotos/mascaras/mascara36_1.jpeg" class="glightbox"><img src="../mis_fotos/mascaras/mascara36_1.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza mascara foto 32" /></a>
+      <a href="../mis_fotos/mascaras/mascara36_1.png" class="glightbox"><img src="../mis_fotos/mascaras/mascara36_1.png" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza mascara foto 32" /></a>
       <a href="../mis_fotos/mascaras/mascara36_2.jpeg" class="glightbox"><img src="../mis_fotos/mascaras/mascara36_2.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 4" /></a>
     </div>
 
