--- a/piezassastrehtml/pieza_sastre_17.html
+++ b/piezassastrehtml/pieza_sastre_17.html
@@ -19,8 +19,8 @@
 
       <!-- Imagen principal a la izquierda con marco decorativo y efecto hover -->
       <div class="md:w-1/2 flex justify-center transition-transform transform hover:scale-105">
-        <a href="../mis_fotos/sastre/sastre17.jpeg" class="glightbox">
-          <img src="../mis_fotos/sastre/sastre17.jpeg" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza cajon de sastre foto 9" />
+        <a href="../mis_fotos/sastre/sastre17.png" class="glightbox">
+          <img src="../mis_fotos/sastre/sastre17.png" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza cajon de sastre foto 9" />
         </a>
       </div>
 
@@ -69,8 +69,8 @@ El arte Bambara combina estética refinada, función pedagógica y expresión po
     <!-- Galería adicional con lightbox -->
     <h3 class="text-2xl font-semibold mt-10 mb-4 text-gray-700">Galería Adicional</h3>
     <div class="grid grid-cols-1 gap-6">
-      <a href="../mis_fotos/sastre/sastre17_1.jpeg" class="glightbox"><img src="../mis_fotos/sastre/sastre17_1.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza cajón de sastre foto 8" /></a>
-      <a href="../mis_fotos/sastre/sastre17_2.jpeg" class="glightbox"><img src="../mis_fotos/sastre/sastre17_2.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza cajón de sastre foto 8" /></a>
+      <a href="../mis_fotos/sastre/sastre17_1.png" class="glightbox"><img src="../mis_fotos/sastre/sastre17_1.png" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza cajón de sastre foto 8" /></a>
+      <a href="../mis_fotos/sastre/sastre17_2.png" class="glightbox"><img src="../mis_fotos/sastre/sastre17_2.png" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza cajón de sastre foto 8" /></a>
     </div>
 
     <!-- Botón de volver -->
