--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="grid grid-cols-2 sm:grid-cols-4 md:grid-cols-8 gap-4">
       <a href="piezasestatuahtml/pieza_estatua1.html"><img src="mis_fotos/estatuas/estatua1.png" class="rounded-xl shadow-md object-contain w-full h-28 bg-black" /></a>
       <a href="piezasestatuahtml/pieza_estatua2.html"><img src="mis_fotos/estatuas/estatua2.png" class="rounded-xl shadow-md object-contain w-full h-28 bg-black" /></a>
-      <a href="piezasestatuahtml/pieza_estatua3.html"><img src="mis_fotos/estatuas/estatua3.png" class="rounded-xl shadow-md object-contain w-full h-28 bg-black" /></a>
+      <a href="piezasestatuahtml/pieza_estatua3.html"><img src="mis_fotos/estatuas/estatua3.jpg" class="rounded-xl shadow-md object-contain w-full h-28 bg-black" /></a>
       <a href="piezasestatuahtml/pieza_estatua4.html"><img src="mis_fotos/estatuas/estatua4.png" class="rounded-xl shadow-md object-contain w-full h-28 bg-black" /></a>
       <a href="piezasestatuahtml/pieza_estatua5.html"><img src="mis_fotos/estatuas/estatua5.png" class="rounded-xl shadow-md object-contain w-full h-28 bg-black" /></a>
       <a href="piezasestatuahtml/pieza_estatua6.html"><img src="mis_fotos/estatuas/estatua6.png" class="rounded-xl shadow-md object-contain w-full h-28 bg-black" /></a>
