--- a/piezasmascarahtml/pieza_mascara37.html
+++ b/piezasmascarahtml/pieza_mascara37.html
@@ -27,21 +27,15 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Mascara Fang</h2>
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Mascara Pendé</h2>
         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
-        Máscara ritual tallada en madera, con rostro estilizado de ojos cerrados, boca prominente con dientes triangulares y decoración geométrica en la frente y mejillas. La parte superior presenta un elemento corniforme y un tocado elaborado con fibras trenzadas y telas envejecidas. En la parte inferior se observan extensiones escultóricas que evocan manos o extremidades, reforzando su carácter animista. La superficie muestra pátina ritual y desgaste ceremonial.
+       Máscara antropomorfa de rostro alargado, con ojos semicerrados y boca entreabierta mostrando dentición estilizada. El rostro presenta una decoración geométrica policromada en forma de motivos triangulares repetitivos, característica del repertorio estético pende. En la frente destaca un motivo circular concéntrico, mientras que la parte superior está coronada por un cuerno de antílope, posiblemente simbólico o totémico. Las mejillas muestran volúmenes pronunciados y la nariz es rectilínea y alargada.
         </p> 
          <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
-       Máscara del culto Byeri: Asociada a la protección de reliquias ancestrales, especialmente cráneos guardados en cajas sagradas.
-
-Elemento de danza ritual: Activada en ceremonias de iniciación, justicia o evocación espiritual.
-
-Presencia mediadora: La máscara no representa, sino encarna al espíritu protector del linaje.
-
-Símbolo de cohesión comunitaria: Refuerza la memoria ancestral y la autoridad moral del grupo.
-        </p> 
+     Máscara utilizada en contextos rituales y ceremoniales, especialmente en danzas vinculadas a ritos de iniciación, regulación social, justicia comunitaria o celebraciones colectivas. Las máscaras pende desempeñan un papel fundamental en la transmisión de valores morales y sociales. En este caso se trata de una mascara de la fertilidad.      </p> 
         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
-En la cosmología Fang, el culto Byeri es una práctica de veneración de los ancestros, donde las máscaras actúan como guardianes espirituales. Esta pieza, por su complejidad formal y riqueza simbólica, sugiere pertenencia a un contexto ceremonial de alto rango. La combinación de elementos humanos y animales refuerza la idea de dualidad cósmica, donde lo visible y lo invisible coexisten. La máscara Fang es una obra de arte y una entidad viva, activada por danza, canto y ofrenda.
+ Las máscaras pende se caracterizan por una fuerte expresividad gráfica y simbólica, y ocupan un lugar destacado dentro del arte tradicional africano por su complejidad formal y su función social.
+
         </p> 
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 30 cm de alto</li>
