--- a/piezasestatuahtml/pieza_estatua23.html
+++ b/piezasestatuahtml/pieza_estatua23.html
@@ -27,29 +27,30 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Figura Bakota</h2>
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Fetiche Ibibio</h2>
         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
-          Figura estilizada con rostro plano y ovalado, ojos circulares, nariz alargada y cuello acanalado.
+          Los Ibibio son uno de los pueblos más antiguos del sureste de Nigeria, principalmente en el estado de Akwa Ibom y partes de Cross River.
+Son conocidos por:
 
-El cuerpo forma un arco o rombo, con diseño geométrico abstracto.
+Su lengua ibibio, parte de la familia niger-congo.
 
-Base envuelta en fibras vegetales teñidas en tonos rojos y púrpuras, posiblemente para cubrir el receptáculo de reliquias.
+Su cultura rica en máscaras, sociedades secretas y tradiciones orales.
 
-Superficie decorada con láminas de metal repujado, que reflejan luz y simbolizan poder espiritual.
+Su sistema tradicional de gobierno y roles comunitarios.
         </p>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
-          Colocado sobre cestas que contenían huesos de antepasados venerados.
+        <p class="text-lg leading-relaxed mb-4 text-gray-200"; style="text-align: justify;">
+        Los Ibibio utilizan objetos consagrados que se cree que:
 
-Utilizado en rituales funerarios y de protección familiar.
+        Protegen al individuo o a la comunidad;
 
-Actúa como guardián del linaje, asegurando fertilidad, cohesión y continuidad espiritual.
+Alejan el mal;
+
+Traen buena fortuna;
+
+Sirven como medios de comunicación espiritual
         </p>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
-          Los Bakota practican el culto a los ancestros como base de su organización social.
-
-El arte del mbulu-ngulu combina estética, espiritualidad y función protectora.
-
-Estas figuras fueron objeto de coleccionismo europeo desde el siglo XX, lo que ha generado debates sobre descontextualización y conservación.
+         <p class="text-lg leading-relaxed mb-4 text-gray-200"; style="text-align: justify;">
+        En los ritos ofrecían sacrificios cuyos restos como leche de vaca y sangre de pollo aparecen en la figura
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
