--- a/piezascascohtml/pieza_casco3.html
+++ b/piezascascohtml/pieza_casco3.html
@@ -27,14 +27,20 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Mascara Casco Malinké</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          La mascara casco Malinké es una pieza emblemática del arte africano tradicional originaria de la etnia Malinké, que habita principalmente en regiones de Africa Occidental, como Guinea, Mali y Costa de Marfil. Esta máscara se caracteriza por su diseño distintivo que combina elementos geométricos y simbólicos, reflejando la rica cosmovisión y las tradiciones culturales de la comunidad Malinké
         </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          
+        Es una máscara de danza y se utiliza en los festivales conmemorativos de esta etnia
+        </p>
+
+
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> Guinea Ecuatorial</li>
           <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
         </ul>
       </div>
