--- a/piezasestatuahtml/pieza_estatua34.html
+++ b/piezasestatuahtml/pieza_estatua34.html
@@ -27,20 +27,28 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Fetiche Bakongo Kongo</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Los nkondi son un tipo específico de nkisi conocidos por sus figuras humanas cubiertas de clavos, cuchillas o punzones.
-Se utilizan para:
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Figura Ijo (Ijaw)</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200"; style="text-align: justify;">
+           Los Ijo (o Ijaw) son un grupo étnico asentado en las zonas pantanosas y fluviales del delta del Níger. Su arte está muy vinculado a la espiritualidad, la comunicación con entidades acuáticas, la protección comunitaria y los rituales vinculados a la fertilidad y la salud.
+Las figuras antropomorfas —sobre todo femeninas— suelen emplearse como objetos rituales para cultos de fertilidad, cuidado, protección del hogar o mediación con espíritus ancestrales.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200"; style="text-align: justify;">
+          Esta figura presenta materiales asociados tradicionalmente a rituales:
 
-Hacer cumplir pactos y juramentos.
+Cordajes y fibras vegetales atados alrededor del cuello, cintura o vientre.
+Faldas de fibra, típicas en estatuillas usadas como recipientes de poder o amuletos comunitarios.
+Restos de sustancias o pátinas que podrían haber sido aplicadas durante ceremonias (aceites, arcillas, tintes vegetales).
 
-Castigar a infractores.
+Estos añadidos no son meramente decorativos: suelen activar o “cargar” espiritualmente a la figura según las creencias locales.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200"; style="text-align: justify;">
+          Llama la atención la prominencia del vientre y la zona pectoral, rasgos muy presentes en:
 
-Proteger a la comunidad de peligros o brujería.
+Figuras de maternidad (iyawo o figuras madre)
+Objetos ligados a la fertilidad femenina o a la protección de embarazos
+Representaciones simbólicas de espíritus de agua femeninos (ogboin)
 
-Perseguir a espíritus malignos o criminales.
-
-Cada clavo representa una petición, contrato o conflicto en el que el espíritu del nkondi debe intervenir.
+Este tipo de figuras solían usarse en consultas espirituales, ritos de iniciación o peticiones de protección ante espíritus fluviales.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
