--- a/piezassastrehtml/pieza_sastre_8.html
+++ b/piezassastrehtml/pieza_sastre_8.html
@@ -27,15 +27,22 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Taburete arte contemporaneo africano</h2>
+
+         <p class="text-lg leading-relaxed mb-4 text-gray-200"; style="text-align: justify;">
+          Estructura vertical compuesta por tres figuras femeninas talladas en madera, dispuestas en círculo y sosteniendo con los brazos extendidos un tablero o superficie superior redonda. Cada figura está tallada con cuerpo estilizado, cabeza redondeada, y vestimenta con motivos incisos. La base es igualmente circular y tallada en una sola pieza junto con las figuras.
         </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200"; style="text-align: justify;">
+          Talla manual en bloque.
+Decoración con incisiones lineales y motivos geométricos (líneas onduladas, cruces, bandas ornamentales).
+Lijado y pulido final para obtener superficies suaves.
+        </p>
+
         <ul class="list-disc pl-5 text-gray-200">
-          <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Tamaño:</strong> 38 cm de alto</li>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> Senegal</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
