--- a/piezassastrehtml/pieza_sastre_16.html
+++ b/piezassastrehtml/pieza_sastre_16.html
@@ -26,7 +26,7 @@
 
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
-        <!-- Nombre de la pieza como encabezamiento -->a
+        <!-- Nombre de la pieza como encabezamiento -->
         <h2 class="text-3xl font-bold mb-4 text-gray-200">Harpe Membétou</h2>
         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
             Corps en bois sculpté représentant une figure humaine stylisée (souvent féminine ou ancêtre).
